# LLM-Assisted_Query_Generation

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
datasets/: load_mongodb.py  test_queries.json
datasets/mongodb_samples/: sample_users.json
docs/: literature_review.md
src/: __init__.py
src/mcp_servers/: __init__.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py
